<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/world_news"
        android:icon="@drawable/ic_world"
        android:title="@string/world" />

    <item
        android:id="@+id/local_news"
        android:icon="@drawable/ic_local"
        android:title="@string/local"/>

    <item
        android:id="@+id/economic_news"
        android:icon="@drawable/ic_economics"
        android:title="@string/economics" />

    <item
        android:id="@+id/tech_news"
        android:icon="@drawable/ic_tech"
        android:title="@string/tech"/>

    <item
        android:id="@+id/sport_news"
        android:icon="@drawable/ic_sports"
        android:title="@string/sports"/>

    <item
        android:id="@+id/health_news"
        android:icon="@drawable/ic_health"
        android:title="@string/health"/>

</menu>